--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken.html">Sweet and Sour Chicken</a>
+    <ul>
+        <li><a href="recipes/chicken.html">Sweet and Sour Chicken</a></li>
+         <li><a href="recipes/tacos.html">Blackened Salmon Tacos with Chunky Mango Avocado Salsa</a></li>
+         <li><a href="recipes/salad.html">Watermelon Salad with Feta</a></li>
+    </ul>
+    
 </body>
 </html>
