--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sweet and Sour Chicken</title>
+    <title>Blackened Salmon Tacos with Chunky Mango Avocado Salsa</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
